# GitGraph

./: .env.example  .gitignore  Dockerfile  README.md  README.zh.md  docker-compose.yml  pyproject.toml  rename_evograph.py  render.yaml
.chrome-temp/: Local State
.chrome-temp/Default/: DIPS  History  Preferences  Secure Preferences  Web Data
.chrome-temp/GrShaderCache/: index
.chrome-temp/GraphiteDawnCache/: index
.chrome-temp/ShaderCache/: index
.chrome-temp/segmentation_platform/: ukm_db
.chrome-temp2/: Local State
.chrome-temp2/Default/: History  Preferences  Secure Preferences  Web Data
.chrome-temp2/GrShaderCache/: index
.chrome-temp2/GraphiteDawnCache/: index
.chrome-temp2/ShaderCache/: index
.chrome-temp2/segmentation_platform/: ukm_db
.chrome-temp3/: Local State
.chrome-temp3/Default/: BrowsingTopicsState  History  Preferences  Secure Preferences  Web Data
.chrome-temp3/GrShaderCache/: index
.chrome-temp3/GraphiteDawnCache/: index
.chrome-temp3/ShaderCache/: index
.chrome-temp3/segmentation_platform/: ukm_db
.chrome-temp4/: Local State
.chrome-temp4/Default/: History  Preferences  Secure Preferences  Web Data
.chrome-temp4/GrShaderCache/: index
.chrome-temp4/GraphiteDawnCache/: index
.chrome-temp4/ShaderCache/: index
.chrome-temp4/segmentation_platform/: ukm_db
docs/: demo-guide.md  代码助手改造方案.md  项目升级方案.md
docs/design/: BACKEND_AGENT_PROMPT.md  CODEGRAPH_PRD.md  HOMEPAGE_FIX_PROMPT.md  HOMEPAGE_IMPL_PROMPT.md  MAINFLOW_PAGE_PROMPT.md  OVERVIEW_PAGE_PROMPT.md  SHOWCASE_PAGE_PROMPT.md  TAKEAWAY_PAGE_PROMPT.md
docs/scripts/: build_evograph_demo_doc.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
tests/: test_breaking_change_manual.py  test_code_parser_manual.py
(+468 files in other folders)
