[project]
name = "evograph"
version = "0.1.0"
description = "EvoGraph - Real-time Knowledge Graph Evolution Agent (Agentic RAG)"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [{name = "EvoGraph Team"}]

dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.3",
    "pydantic-settings==2.7.0",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "neo4j==5.27.0",
    "qdrant-client==1.12.1",
    "redis==5.2.1",
    "celery[redis]==5.4.0",
    "langchain==0.3.13",
    "langchain-openai==0.2.14",
    "langchain-community==0.3.13",
    "openai==1.58.1",
    "tiktoken==0.8.0",
    "httpx==0.28.1",
    "python-multipart==0.0.20",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "jinja2==3.1.4",
    "pypdf==5.1.0",
    "beautifulsoup4==4.12.3",
    "markdown==3.7",
    "rank-bm25==0.2.2",
    "websockets==14.1",
    "structlog==24.4.0",
    "opentelemetry-api==1.29.0",
    "opentelemetry-sdk==1.29.0",
    "prometheus-client==0.21.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "httpx==0.28.1",
    "ruff==0.8.4",
    "mypy==1.13.0",
    "pre-commit==4.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evograph"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
